update usos data
