# GeneratedApiClient/src/IO.Swagger/Model/CourseLecturer.cs
@@ -1,0 +1,186 @@
+/* 
+ * Student survey system API
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: v1
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+using System;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Text.RegularExpressions;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using System.ComponentModel.DataAnnotations;
+using SwaggerDateConverter = IO.Swagger.Client.SwaggerDateConverter;
+
+namespace IO.Swagger.Model
+{
+    /// <summary>
+    /// CourseLecturer
+    /// </summary>
+    [DataContract]
+        public partial class CourseLecturer :  IEquatable<CourseLecturer>, IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="CourseLecturer" /> class.
+        /// </summary>
+        /// <param name="id">id.</param>
+        /// <param name="lecturerId">lecturerId.</param>
+        /// <param name="lecturer">lecturer.</param>
+        /// <param name="courseId">courseId.</param>
+        /// <param name="course">course.</param>
+        public CourseLecturer(int? id = default(int?), int? lecturerId = default(int?), User lecturer = default(User), int? courseId = default(int?), Course course = default(Course))
+        {
+            this.Id = id;
+            this.LecturerId = lecturerId;
+            this.Lecturer = lecturer;
+            this.CourseId = courseId;
+            this.Course = course;
+        }
+        
+        /// <summary>
+        /// Gets or Sets Id
+        /// </summary>
+        [DataMember(Name="id", EmitDefaultValue=false)]
+        public int? Id { get; set; }
+
+        /// <summary>
+        /// Gets or Sets LecturerId
+        /// </summary>
+        [DataMember(Name="lecturerId", EmitDefaultValue=false)]
+        public int? LecturerId { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Lecturer
+        /// </summary>
+        [DataMember(Name="lecturer", EmitDefaultValue=false)]
+        public User Lecturer { get; set; }
+
+        /// <summary>
+        /// Gets or Sets CourseId
+        /// </summary>
+        [DataMember(Name="courseId", EmitDefaultValue=false)]
+        public int? CourseId { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Course
+        /// </summary>
+        [DataMember(Name="course", EmitDefaultValue=false)]
+        public Course Course { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class CourseLecturer {\n");
+            sb.Append("  Id: ").Append(Id).Append("\n");
+            sb.Append("  LecturerId: ").Append(LecturerId).Append("\n");
+            sb.Append("  Lecturer: ").Append(Lecturer).Append("\n");
+            sb.Append("  CourseId: ").Append(CourseId).Append("\n");
+            sb.Append("  Course: ").Append(Course).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+  
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="input">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object input)
+        {
+            return this.Equals(input as CourseLecturer);
+        }
+
+        /// <summary>
+        /// Returns true if CourseLecturer instances are equal
+        /// </summary>
+        /// <param name="input">Instance of CourseLecturer to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(CourseLecturer input)
+        {
+            if (input == null)
+                return false;
+
+            return 
+                (
+                    this.Id == input.Id ||
+                    (this.Id != null &&
+                    this.Id.Equals(input.Id))
+                ) && 
+                (
+                    this.LecturerId == input.LecturerId ||
+                    (this.LecturerId != null &&
+                    this.LecturerId.Equals(input.LecturerId))
+                ) && 
+                (
+                    this.Lecturer == input.Lecturer ||
+                    (this.Lecturer != null &&
+                    this.Lecturer.Equals(input.Lecturer))
+                ) && 
+                (
+                    this.CourseId == input.CourseId ||
+                    (this.CourseId != null &&
+                    this.CourseId.Equals(input.CourseId))
+                ) && 
+                (
+                    this.Course == input.Course ||
+                    (this.Course != null &&
+                    this.Course.Equals(input.Course))
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                int hashCode = 41;
+                if (this.Id != null)
+                    hashCode = hashCode * 59 + this.Id.GetHashCode();
+                if (this.LecturerId != null)
+                    hashCode = hashCode * 59 + this.LecturerId.GetHashCode();
+                if (this.Lecturer != null)
+                    hashCode = hashCode * 59 + this.Lecturer.GetHashCode();
+                if (this.CourseId != null)
+                    hashCode = hashCode * 59 + this.CourseId.GetHashCode();
+                if (this.Course != null)
+                    hashCode = hashCode * 59 + this.Course.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<System.ComponentModel.DataAnnotations.ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+}
