# swagger.json
@@ -847,6 +847,18 @@
         }
       }
     },
+    "/Users/UpdateUserUsosData": {
+      "put": {
+        "tags": [
+          "Users"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/Users/{id}": {
       "get": {
         "tags": [
@@ -1116,6 +1128,11 @@
           "endDate": {
             "type": "string",
             "format": "date-time"
+          },
+          "today": {
+            "type": "string",
+            "format": "date-time",
+            "readOnly": true
           }
         },
         "additionalProperties": false
@@ -1146,11 +1163,6 @@
         "type": "object",
         "properties": {
           "id": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "usosId": {
             "type": "integer",
             "format": "int32",
             "nullable": true
@@ -1199,7 +1211,7 @@
         },
         "additionalProperties": false
       },
-      "User": {
+      "Semester": {
         "type": "object",
         "properties": {
           "id": {
@@ -1207,7 +1219,108 @@
             "format": "int32",
             "nullable": true
           },
-          "usosId": {
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "courses": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Course"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "CourseLecturer": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "lecturerId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "lecturer": {
+            "$ref": "#/components/schemas/User"
+          },
+          "courseId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "course": {
+            "$ref": "#/components/schemas/Course"
+          }
+        },
+        "additionalProperties": false
+      },
+      "Course": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "semesterId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "semester": {
+            "$ref": "#/components/schemas/Semester"
+          },
+          "courseLecturers": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CourseLecturer"
+            },
+            "nullable": true
+          },
+          "courseParticipants": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CourseParticipant"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "CourseParticipant": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "participantId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "participant": {
+            "$ref": "#/components/schemas/User"
+          },
+          "courseId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "course": {
+            "$ref": "#/components/schemas/Course"
+          }
+        },
+        "additionalProperties": false
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": {
             "type": "integer",
             "format": "int32",
             "nullable": true
@@ -1236,6 +1349,20 @@
           },
           "userRole": {
             "$ref": "#/components/schemas/UserRole"
+          },
+          "courseParticipants": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CourseParticipant"
+            },
+            "nullable": true
+          },
+          "courseLecturers": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CourseLecturer"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
